--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -163,9 +163,9 @@ $spotThree: #352155;
     p {
       // text-transform: uppercase;
       letter-spacing: _font(letter-spacing);
-      font-size: 1rem;
+      font-size: 1.1rem;
       line-height: 2;
-      font-weight: 700
+      font-weight: 500
     }
   }
 
@@ -347,3 +347,6 @@ $spotThree: #352155;
   }
 }
 
+#header nav ul li a {
+  font-weight: 600;
+}
