changes recommended on the fcc forum

--- a/styles/components/_avatar.scss
+++ b/styles/components/_avatar.scss
@@ -225,19 +225,19 @@ svg-container {
 svg.active {
 	.svg-elem-1 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #02040f
 	}
 	.svg-elem-2 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill:#e5dada
 	}
 	.svg-elem-3 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #D4A9A2
 	}
 	.svg-elem-4 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #DBCDA0
 	}
 	.svg-elem-5 {
 		stroke-dashoffset: 0;
@@ -245,7 +245,7 @@ svg.active {
 	}
 	.svg-elem-6 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #002642
 	}
 	.svg-elem-7 {
 		stroke-dashoffset: 0;
@@ -277,7 +277,7 @@ svg.active {
 	}
 	.svg-elem-14 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: darkgray
 	}
 	.svg-elem-15 {
 		stroke-dashoffset: 0;
@@ -285,7 +285,7 @@ svg.active {
 	}
 	.svg-elem-16 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #D4A9A2
 	}
 	.svg-elem-17 {
 		stroke-dashoffset: 0;
@@ -305,15 +305,15 @@ svg.active {
 	}
 	.svg-elem-21 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #002642
 	}
 	.svg-elem-22 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #D4A9A2
 	}
 	.svg-elem-23 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: rgb(47, 52, 79)
 	}
 	.svg-elem-24 {
 		stroke-dashoffset: 0;
@@ -325,19 +325,19 @@ svg.active {
 	}
 	.svg-elem-26 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #002642
 	}
 	.svg-elem-27 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #D4A9A2
 	}
 	.svg-elem-28 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #840032
 	}
 	.svg-elem-29 {
 		stroke-dashoffset: 0;
-		fill: rgb(100, 100, 100);
+		fill: #002642
 	}
 	.svg-elem-30 {
 		stroke-dashoffset: 0;
