--- a/styles/components/_profile-image.scss
+++ b/styles/components/_profile-image.scss
@@ -1,6 +1,7 @@
 div#profile-image {
   background-image: url(../static/images/profile_100.png);
-  background-color: rgba(192, 192, 192, 0.274);
+  // background-color: rgba(192, 192, 192, 0.274);
+  background-color:#fea;
   height: 70px;
   width: 70px;
   position: absolute;
@@ -8,7 +9,8 @@ div#profile-image {
   top: 5px;
   border-radius: 100%;
   border-style: solid;
-  border-color: #3e5271d6;
+  //border-color: #3e5271d6;
+  border-color:silver;
   border-width: medium;
   background-size: 65px;
   background-repeat: no-repeat;
