--- a/styles/layout/_main.scss
+++ b/styles/layout/_main.scss
@@ -28,7 +28,9 @@
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
-			background-color: transparentize(_palette(bg), 0.15);
+			// background-color: transparentize(_palette(bg), 0.15);
+			background-color: transparentize(_palette(main-bg), 0.15);
+
 			border-radius: _size(border-radius);
 			opacity: 0;
 
