--- a/styles/libs/_vars.scss
+++ b/styles/libs/_vars.scss
@@ -31,7 +31,9 @@
 
 // Palette.
 	$palette: (
-		bg:							#1b1f22bd,
+		//bg:							#1b1f22bd,
+		bg:							#2f31c0bd,
+		main-bg:					rgba(0, 0, 0, 0.6),
 		bg-alt:						#000000,
 		bg-overlay:					rgba(19,21,25,0.5),
 		fg:							#ffffff,
